samples/_failures_safe/1761555950_0ba98b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_716fc6d2.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
